Bug 826072 - Dispatch Init() out of nsGonkCameraControl's constructor. r=mikeh